--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -1,3 +1,5 @@
+@import "../../styles/Variables.scss";
+
 header{
     width: 100vw;
     display:flex;
@@ -36,14 +38,14 @@ header{
   
     color: rgb(255, 255, 255);
     text-shadow:
-    0 0 7px #cf47e2,
-    0 0 10px #cf47e2,
-    0 0 21px #cf47e2,
-    0 0 42px #7200ff,
-    0 0 82px #7200ff,
-    0 0 92px #7200ff,
-    0 0 102px #7200ff,
-    0 0 151px #7200ff;
+    0 0 7px $myViolet,
+    0 0 10px $myViolet,
+    0 0 21px $myViolet,
+    0 0 42px $myIndigo,
+    0 0 82px $myIndigo,
+    0 0 92px $myIndigo,
+    0 0 102px $myIndigo,
+    0 0 151px $myIndigo;
   
     transition: 0.5s ease-in-out;
   }
@@ -51,14 +53,14 @@ header{
   #navbar ul li:hover{
     text-decoration: underline;
     text-shadow:
-    0 0 7px #d297da,
-    0 0 10px #d297da,
-    0 0 21px #d297da,
-    0 0 42px #bf8aff,
-    0 0 82px #bf8aff,
-    0 0 92px #bf8aff,
-    0 0 102px #bf8aff,
-    0 0 151px #bf8aff;
+    0 0 7px $myViolet,
+    0 0 10px $myViolet,
+    0 0 21px $myViolet,
+    0 0 42px $myIndigo,
+    0 0 82px $myIndigo,
+    0 0 92px $myIndigo,
+    0 0 102px $myIndigo,
+    0 0 151px $myIndigo;
   
     transition: 0.5s ease-in-out;
   }
@@ -80,13 +82,13 @@ header{
   
     color: rgb(255, 255, 255);
     text-shadow:
-    0 0 2px #cf47e2,
-    0 0 5px #cf47e2,
-    0 0 10px #cf47e2,
-    0 0 20px #7200ff,
-    0 0 40px #7200ff,
-    0 0 46px #7200ff,
-    0 0 50px #7200ff,
-    0 0 75px #7200ff;
+    0 0 7px $myViolet,
+    0 0 10px $myViolet,
+    0 0 21px $myViolet,
+    0 0 42px $myIndigo,
+    0 0 82px $myIndigo,
+    0 0 92px $myIndigo,
+    0 0 102px $myIndigo,
+    0 0 151px $myIndigo;
   }
   
